<resources>
    <string name="app_name">Proyacto Avaluos</string>
    <string name="titulo">Movil Avaluos</string>
    <string name="usu">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="ingr">Ingresar</string>
    <string name="im">imagen</string>
    <string name="olusu">¿No estas registrado?</string>
    <string name="olpas">¿Olvidaste tu contraseña?</string>
    <string name="foac">Folios Activos</string>
    <string name="addfolio">Agregar Folio</string>
    <string name="tituloRegistrarse">Registro de Usuario</string>
    <string name="passvalid">Confirmar Contraseña</string>
    <string name="regi">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
    <string name="nom_calle">Nombre de la Calle</string>
    <string name="num">Número de casa</string>
    <string name="codPostal">Codigo postal</string>
    <string name="Muni">Municipio</string>
    <string name="pais">Pais</string>
    <string name="folios_de">"Folios activos de "</string>
    <string name="newAvaluo">Nuevo Avaluo</string>
    <string name="folio">Folio</string>
    <string name="modulo_de_captura">Modulo de Captura:</string>
    <string name="caracter_sticas_del_inmueble">Características del Inmueble</string>
    <string name="caracter_sticas_del_entorno">Características del Entorno</string>
    <string name="fotograf_as">Fotografías</string>
    <string name="sala">Sala</string>
    <string name="alta_de_otro">Alta de otro</string>
    <string name="pisos">Pisos</string>
    <string name="muros">Muros</string>
    <string name="platfones">Platfones</string>
    <string name="opcion_diferente">Opcion diferente</string>
    <string name="ingrese_una_nueva_opcion">Ingrese una nueva opcion</string>
</resources>