<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrarseActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloRegistrarse"
        android:padding="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:hint="@string/usu"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTexPassword"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:hint="@string/pass"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:hint="@string/passvalid"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:text="@string/regi" />

</LinearLayout>