<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/tituloAvaDiag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newAvaluo"
            android:textSize="20sp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/subTituloAvalDiag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/tituloAvaDiag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text=""
            />
        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/subTituloAvalDiag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <EditText
                android:id="@+id/editTextNomCalle"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/nom_calle"
                android:inputType="text"
                android:autofillHints="" />
            <EditText
                android:id="@+id/editTextNum"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/num"
                android:inputType="numberDecimal"
                android:autofillHints=""/>
            <EditText
                android:id="@+id/editTextCodPostal"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/codPostal"
                android:inputType="numberDecimal"
                android:autofillHints=""/>
            <EditText
                android:id="@+id/editTextMuni"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/Muni"
                android:inputType="text"
                android:autofillHints=""/>
            <EditText
                android:id="@+id/editTextPais"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/pais"
                android:inputType="text"
                android:autofillHints=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/inputs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonCancelarDiag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:layout_margin="25dp"
                android:padding="5dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonAgregarDiag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/agregar"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/avaluos_ic_launcher_background"
                android:layout_margin="25dp"
                android:padding="5dp"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>