<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tituloOpcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_diferente"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="20dp"
            />
        <EditText
            android:id="@+id/editTextOpcion"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:hint="@string/ingrese_una_nueva_opcion"
            android:inputType="text"
            android:autofillHints="" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonCancelarDiag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:layout_margin="25dp"
                android:padding="5dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonAgregarDiag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/agregar"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/avaluos_ic_launcher_background"
                android:layout_margin="25dp"
                android:padding="5dp"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>